--- a/main.css
+++ b/main.css
@@ -1,9 +1,9 @@
 #form-control {
-    width: 35%;
+    width: 450px;
 }
 
 #ladiv {
-    margin-left: 1%;
+    margin-left: 500px;
     margin-top: 1%;
 }
 
