--- a/main.css
+++ b/main.css
@@ -1,9 +1,9 @@
 #form-control {
-    width: 450px;
+    width: 50%;
 }
 
 #ladiv {
-    margin-left: 500px;
+    margin-left: 35%;
     margin-top: 1%;
 }
 
